--- a/gradle.properties
+++ b/gradle.properties
@@ -44,7 +44,7 @@ mapping_version=2023.06.26-1.20.1
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=devilcraft
 # The human-readable display name for the mod.
-mod_name=Devils Ass Craft
+mod_name=Devils Craft
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
@@ -54,6 +54,6 @@ mod_version=1.0.0
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=net.zfair.devilcraft
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=ZacharyFairon
+mod_authors=zfair
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=temp
