--- a/gradle.properties
+++ b/gradle.properties
@@ -40,6 +40,9 @@ mapping_version=2023.06.26-1.20.1
 ## Dependency Properties
 jei_version=15.8.2.26
 
+terrablender_version=3.0.1.10
+terrablender_version_range=[3.0.1.10,)
+
 ## Mod Properties
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
