--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -22,3 +22,10 @@ mandatory=true
 versionRange="[1.20.1,1.21)"
 ordering="NONE"
 side="BOTH"
+
+[[dependencies.devilcraft]]
+modId="terrablender"
+mandatory=true
+versionRange="${terrablender_version_range}"
+ordering="NONE"
+side="BOTH"
